; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/cb710/extr_debug.c_allow_reg_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/cb710/extr_debug.c_allow_reg_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@allow = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @allow_reg_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @allow_reg_read(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = udiv i32 %8, 8
  %10 = shl i32 1, %9
  %11 = sub nsw i32 %10, 1
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %6, align 4
  %13 = udiv i32 %12, 8
  %14 = load i32, i32* %5, align 4
  %15 = mul i32 %14, %13
  store i32 %15, i32* %5, align 4
  %16 = load i32*, i32** @allow, align 8
  %17 = load i32, i32* %4, align 4
  %18 = zext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %16, i64 %18
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %5, align 4
  %22 = lshr i32 %20, %21
  %23 = load i32, i32* %7, align 4
  %24 = and i32 %22, %23
  %25 = load i32, i32* %7, align 4
  %26 = icmp eq i32 %24, %25
  %27 = zext i1 %26 to i32
  ret i32 %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
